libs/sqf/tests/snapshots/simple__simple_dev-2.snap
---
source: libs/sqf/tests/simple.rs
expression: ast
---
[
    AssignLocal(
        "_target",
        NularCommand(
            NularCommand {
                name: "playerTargetLock",
            },
            18..34,
        ),
        0..34,
    ),
]
