libs/sqf/tests/snapshots/simple__simple_dev.snap
---
source: libs/sqf/tests/simple.rs
expression: sqfc
---
[
    1,
    0,
    0,
    0,
    5,
    31,
    0,
    0,
    0,
    2,
    48,
    2,
    0,
    16,
    0,
    0,
    112,
    108,
    97,
    121,
    101,
    114,
    116,
    97,
    114,
    103,
    101,
    116,
    108,
    111,
    99,
    107,
    7,
    0,
    0,
    95,
    116,
    97,
    114,
    103,
    101,
    116,
    17,
    0,
    0,
    1,
    95,
    0,
    0,
    0,
    2,
    0,
    46,
    2,
    0,
    1,
    55,
    0,
    0,
    35,
    108,
    105,
    110,
    101,
    32,
    49,
    32,
    34,
    92,
    100,
    101,
    118,
    46,
    115,
    113,
    102,
    34,
    10,
    112,
    114,
    105,
    118,
    97,
    116,
    101,
    32,
    95,
    116,
    97,
    114,
    103,
    101,
    116,
    32,
    61,
    32,
    112,
    108,
    97,
    121,
    101,
    114,
    84,
    97,
    114,
    103,
    101,
    116,
    76,
    111,
    99,
    107,
    59,
    10,
    0,
    0,
    0,
    165,
    0,
    3,
    120,
    0,
    0,
    2,
    4,
    37,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    6,
    19,
    0,
    0,
    0,
    0,
    1,
    0,
    1,
    0,
    17,
    0,
    0,
    2,
    1,
    0,
    8,
    0,
    0,
    47,
    100,
    101,
    118,
    46,
    115,
    113,
    102,
    3,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
]
