libs/sqf/tests/snapshots/simple__simple_eventhandler.snap
---
source: libs/sqf/tests/simple.rs
expression: sqfc
---
[
    1,
    0,
    0,
    0,
    5,
    125,
    0,
    0,
    0,
    2,
    0,
    30,
    12,
    0,
    2,
    0,
    0,
    95,
    120,
    13,
    0,
    0,
    100,
    101,
    108,
    101,
    116,
    101,
    118,
    101,
    104,
    105,
    99,
    108,
    101,
    10,
    0,
    0,
    97,
    108,
    108,
    112,
    108,
    97,
    121,
    101,
    114,
    115,
    5,
    0,
    0,
    99,
    111,
    117,
    110,
    116,
    6,
    0,
    0,
    112,
    133,
    2,
    5,
    116,
    3,
    0,
    49,
    105,
    118,
    101,
    2,
    0,
    0,
    105,
    102,
    6,
    0,
    0,
    102,
    105,
    110,
    100,
    105,
    102,
    7,
    0,
    0,
    102,
    111,
    114,
    101,
    97,
    99,
    104,
    4,
    0,
    0,
    116,
    104,
    101,
    110,
    23,
    0,
    0,
    99,
    98,
    97,
    95,
    102,
    110,
    99,
    95,
    97,
    100,
    100,
    101,
    118,
    101,
    110,
    116,
    104,
    97,
    110,
    100,
    108,
    101,
    114,
    4,
    0,
    0,
    99,
    97,
    108,
    108,
    17,
    0,
    0,
    1,
    81,
    3,
    0,
    0,
    2,
    15,
    11,
    0,
    0,
    3,
    0,
    0,
    0,
    16,
    0,
    0,
    128,
    3,
    0,
    0,
    0,
    0,
    7,
    17,
    116,
    0,
    2,
    2,
    0,
    0,
    0,
    2,
    156,
    1,
    7,
    2,
    0,
    1,
    0,
    0,
    115,
    0,
    0,
    0,
    8,
    39,
    133,
    0,
    121,
    101,
    4,
    7,
    100,
    4,
    124,
    2,
    8,
    0,
    7,
    0,
    5,
    0,
    0,
    149,
    0,
    0,
    0,
    17,
    39,
    133,
    0,
    163,
    101,
    4,
    9,
    100,
    4,
    126,
    2,
    0,
    9,
    108,
    8,
    6,
    95,
    0,
    0,
    0,
    101,
    0,
    0,
    128,
    8,
    109,
    3,
    4,
    116,
    1,
    7,
    0,
    7,
    0,
    2,
    0,
    1,
    1,
    0,
    3,
    106,
    104,
    2,
    7,
    7,
    0,
    7,
    0,
    0,
    1,
    2,
    0,
    4,
    185,
    116,
    1,
    3,
    10,
    0,
    2,
    0,
    3,
    177,
    164,
    1,
    0,
    7,
    8,
    0,
    1,
    9,
    0,
    0,
    115,
    111,
    109,
    101,
    116,
    104,
    105,
    110,
    103,
    0,
    62,
    0,
    0,
    0,
    141,
    0,
    0,
    128,
    6,
    122,
    3,
    4,
    72,
    116,
    0,
    3,
    6,
    0,
    4,
    0,
    2,
    66,
    167,
    1,
    5,
    0,
    2,
    100,
    4,
    7,
    0,
    6,
    0,
    6,
    0,
    1,
    3,
    0,
    3,
    80,
    184,
    2,
    2,
    9,
    0,
    0,
    38,
    1,
    42,
    162,
    3,
    52,
    1,
    174,
    22,
    0,
    2,
    126,
    2,
    0,
    17,
    112,
    20,
    6,
    36,
    1,
    0,
    0,
    38,
    0,
    0,
    128,
    4,
    108,
    6,
    2,
    1,
    6,
    0,
    4,
    63,
    176,
    4,
    1,
    2,
    0,
    3,
    57,
    164,
    1,
    5,
    3,
    0,
    0,
    3,
    1,
    0,
    0,
    78,
    39,
    253,
    1,
    13,
    125,
    2,
    16,
    125,
    15,
    7,
    167,
    1,
    5,
    0,
    2,
    102,
    4,
    0,
    16,
    124,
    15,
    1,
    7,
    0,
    3,
    21,
    184,
    2,
    0,
    32,
    9,
    0,
    1,
    115,
    1,
    0,
    10,
    123,
    32,
    100,
    101,
    108,
    101,
    116,
    101,
    86,
    101,
    104,
    105,
    99,
    108,
    101,
    32,
    95,
    120,
    32,
    125,
    32,
    99,
    111,
    117,
    110,
    116,
    32,
    97,
    108,
    108,
    80,
    108,
    97,
    121,
    101,
    114,
    115,
    59,
    10,
    10,
    10,
    91,
    34,
    39,
    196,
    3,
    0,
    2,
    34,
    44,
    32,
    123,
    10,
    32,
    32,
    32,
    32,
    105,
    102,
    32,
    40,
    97,
    108,
    105,
    118,
    101,
    32,
    112,
    128,
    5,
    3,
    41,
    32,
    116,
    104,
    101,
    110,
    208,
    3,
    96,
    4,
    40,
    8,
    1,
    7,
    32,
    102,
    105,
    110,
    100,
    73,
    102,
    32,
    123,
    32,
    160,
    6,
    125,
    12,
    59,
    144,
    8,
    124,
    4,
    184,
    9,
    100,
    1,
    108,
    0,
    46,
    68,
    2,
    40,
    156,
    0,
    7,
    125,
    32,
    102,
    111,
    114,
    69,
    97,
    99,
    104,
    32,
    40,
    100,
    1,
    180,
    3,
    0,
    16,
    125,
    59,
    10,
    125,
    93,
    32,
    99,
    97,
    108,
    108,
    32,
    67,
    66,
    65,
    95,
    102,
    110,
    99,
    95,
    97,
    100,
    100,
    69,
    118,
    101,
    110,
    116,
    72,
    97,
    110,
    100,
    108,
    101,
    114,
    32,
    24,
    16,
    3,
    32,
    6,
    136,
    4,
    100,
    23,
    32,
    3,
    21,
    2,
    0,
    96,
    81,
    125,
    57,
    16,
    112,
    0,
    2,
    1,
    0,
    0,
    4,
    28,
    97,
    1,
    2,
    101,
    76,
    22,
    164,
    1,
    5,
    3,
    0,
    0,
    1,
    4,
    0,
    1,
    5,
    112,
    92,
    100,
    2,
    2,
    0,
    2,
    0,
    7,
    212,
    96,
    1,
    3,
    12,
    0,
    10,
    0,
    3,
    207,
    165,
    1,
    11,
    177,
    4,
    8,
    42,
    144,
    0,
    0,
    1,
    90,
    1,
    0,
    0,
    0,
    19,
    0,
    10,
    0,
    3,
    85,
    1,
    0,
    0,
    0,
    19,
    0,
    11,
    0,
    17,
    0,
    0,
    2,
    1,
    0,
    17,
    0,
    0,
    47,
    101,
    118,
    101,
    110,
    116,
    104,
    97,
    110,
    100,
    108,
    101,
    114,
    46,
    115,
    113,
    102,
    3,
    10,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
]
