libs/sqf/tests/snapshots/simple__simple_format_font.snap
---
source: libs/sqf/tests/simple.rs
expression: sqfc
---
[
    1,
    0,
    0,
    0,
    5,
    50,
    0,
    0,
    0,
    2,
    67,
    3,
    0,
    6,
    0,
    0,
    102,
    111,
    114,
    109,
    97,
    116,
    16,
    0,
    0,
    95,
    114,
    101,
    100,
    116,
    101,
    120,
    116,
    100,
    105,
    115,
    97,
    98,
    108,
    101,
    100,
    17,
    0,
    0,
    95,
    103,
    114,
    101,
    101,
    110,
    116,
    101,
    120,
    116,
    101,
    110,
    97,
    98,
    108,
    101,
    100,
    17,
    0,
    0,
    1,
    106,
    1,
    0,
    0,
    2,
    0,
    14,
    5,
    0,
    1,
    31,
    0,
    0,
    60,
    102,
    111,
    110,
    116,
    32,
    99,
    111,
    108,
    111,
    114,
    61,
    39,
    35,
    70,
    70,
    48,
    48,
    48,
    48,
    39,
    62,
    37,
    49,
    60,
    47,
    96,
    3,
    10,
    62,
    1,
    5,
    0,
    0,
    116,
    104,
    105,
    110,
    103,
    1,
    31,
    0,
    45,
    174,
    0,
    48,
    48,
    116,
    5,
    42,
    172,
    0,
    0,
    2,
    190,
    0,
    0,
    35,
    108,
    105,
    110,
    101,
    32,
    54,
    32,
    34,
    92,
    102,
    111,
    114,
    109,
    97,
    116,
    95,
    116,
    8,
    0,
    16,
    46,
    115,
    113,
    102,
    34,
    10,
    112,
    114,
    105,
    118,
    97,
    116,
    101,
    32,
    95,
    114,
    101,
    100,
    84,
    101,
    120,
    116,
    68,
    105,
    115,
    97,
    98,
    108,
    101,
    100,
    32,
    61,
    32,
    102,
    143,
    5,
    91,
    40,
    34,
    61,
    52,
    2,
    2,
    34,
    41,
    44,
    32,
    34,
    155,
    17,
    34,
    93,
    59,
    40,
    64,
    1,
    2,
    103,
    114,
    101,
    101,
    110,
    106,
    10,
    69,
    110,
    61,
    68,
    1,
    47,
    204,
    2,
    44,
    71,
    1,
    0,
    3,
    0,
    161,
    0,
    12,
    120,
    0,
    4,
    1,
    0,
    0,
    1,
    1,
    0,
    8,
    104,
    1,
    4,
    0,
    0,
    0,
    2,
    0,
    2,
    54,
    104,
    1,
    3,
    6,
    0,
    0,
    0,
    6,
    27,
    164,
    1,
    101,
    4,
    2,
    45,
    144,
    0,
    0,
    1,
    136,
    0,
    0,
    0,
    0,
    7,
    0,
    0,
    0,
    6,
    108,
    0,
    0,
    0,
    0,
    7,
    0,
    2,
    0,
    17,
    0,
    0,
    2,
    1,
    0,
    16,
    0,
    0,
    47,
    102,
    111,
    114,
    109,
    97,
    116,
    95,
    102,
    111,
    110,
    116,
    46,
    115,
    113,
    102,
    3,
    4,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
]
