libs/sqf/tests/snapshots/simple__simple_hash_select-2.snap
---
source: libs/sqf/tests/simple.rs
expression: ast
---
[
    Expression(
        BinaryCommand(
            Select,
            Variable(
                "_explosive",
                0..10,
            ),
            Number(
                FloatOrd(
                    0.0,
                ),
                13..14,
            ),
            11..12,
        ),
        0..14,
    ),
]
