libs/sqf/tests/snapshots/simple__simple_hash_select.snap
---
source: libs/sqf/tests/simple.rs
expression: sqfc
---
[
    1,
    0,
    0,
    0,
    5,
    19,
    0,
    0,
    0,
    2,
    36,
    2,
    0,
    10,
    0,
    0,
    95,
    101,
    120,
    112,
    108,
    111,
    115,
    105,
    118,
    101,
    1,
    0,
    0,
    35,
    17,
    0,
    0,
    1,
    90,
    0,
    0,
    0,
    2,
    0,
    40,
    3,
    0,
    2,
    0,
    0,
    0,
    0,
    1,
    42,
    0,
    0,
    35,
    108,
    105,
    110,
    101,
    32,
    49,
    32,
    34,
    92,
    104,
    97,
    115,
    104,
    95,
    115,
    101,
    108,
    101,
    99,
    116,
    46,
    115,
    113,
    102,
    34,
    10,
    95,
    101,
    120,
    112,
    108,
    111,
    115,
    105,
    118,
    101,
    32,
    35,
    32,
    48,
    10,
    0,
    1,
    0,
    0,
    0,
    101,
    0,
    4,
    114,
    0,
    7,
    27,
    116,
    0,
    14,
    1,
    0,
    0,
    0,
    1,
    0,
    0,
    3,
    38,
    0,
    0,
    0,
    0,
    1,
    0,
    1,
    0,
    17,
    0,
    0,
    2,
    1,
    0,
    16,
    0,
    0,
    47,
    104,
    97,
    115,
    104,
    95,
    115,
    101,
    108,
    101,
    99,
    116,
    46,
    115,
    113,
    102,
    3,
    2,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
]
