libs/sqf/tests/snapshots/simple__simple_hello.snap
---
source: libs/sqf/tests/simple.rs
expression: sqfc
---
[
    1,
    0,
    0,
    0,
    5,
    32,
    0,
    0,
    0,
    2,
    49,
    3,
    0,
    5,
    0,
    0,
    95,
    110,
    97,
    109,
    101,
    6,
    0,
    0,
    102,
    111,
    114,
    109,
    97,
    116,
    10,
    0,
    0,
    115,
    121,
    115,
    116,
    101,
    109,
    99,
    104,
    97,
    116,
    17,
    0,
    0,
    1,
    187,
    0,
    0,
    0,
    2,
    0,
    22,
    4,
    0,
    1,
    5,
    0,
    0,
    72,
    69,
    77,
    84,
    84,
    1,
    10,
    0,
    0,
    72,
    101,
    108,
    108,
    111,
    44,
    32,
    37,
    49,
    33,
    1,
    87,
    0,
    0,
    35,
    108,
    105,
    110,
    101,
    32,
    49,
    32,
    34,
    92,
    104,
    124,
    2,
    0,
    5,
    46,
    115,
    113,
    102,
    34,
    10,
    112,
    114,
    105,
    118,
    97,
    116,
    101,
    32,
    95,
    110,
    97,
    109,
    101,
    32,
    61,
    32,
    34,
    144,
    7,
    0,
    5,
    34,
    59,
    10,
    115,
    121,
    115,
    116,
    101,
    109,
    67,
    104,
    97,
    116,
    32,
    102,
    111,
    114,
    109,
    97,
    116,
    32,
    91,
    34,
    40,
    62,
    1,
    34,
    44,
    164,
    6,
    3,
    93,
    59,
    10,
    0,
    2,
    0,
    161,
    0,
    9,
    120,
    0,
    2,
    1,
    0,
    0,
    6,
    21,
    192,
    1,
    4,
    0,
    0,
    1,
    1,
    0,
    7,
    79,
    116,
    1,
    110,
    4,
    8,
    65,
    164,
    1,
    0,
    4,
    2,
    0,
    2,
    57,
    0,
    0,
    0,
    0,
    2,
    0,
    1,
    0,
    2,
    46,
    0,
    0,
    0,
    0,
    2,
    0,
    2,
    0,
    17,
    0,
    0,
    2,
    1,
    0,
    10,
    0,
    0,
    47,
    104,
    101,
    108,
    108,
    111,
    46,
    115,
    113,
    102,
    3,
    3,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
]
