libs/sqf/tests/snapshots/simple__simple_include-2.snap
---
source: libs/sqf/tests/simple.rs
expression: ast
---
[
    AssignLocal(
        "_things",
        Array(
            [
                Number(
                    FloatOrd(
                        1.0,
                    ),
                    19..20,
                ),
                Number(
                    FloatOrd(
                        2.0,
                    ),
                    21..22,
                ),
                Number(
                    FloatOrd(
                        3.0,
                    ),
                    23..24,
                ),
                Number(
                    FloatOrd(
                        4.0,
                    ),
                    25..26,
                ),
            ],
            19..26,
        ),
        0..27,
    ),
    AssignLocal(
        "_things",
        Array(
            [
                Number(
                    FloatOrd(
                        1.0,
                    ),
                    49..50,
                ),
                Number(
                    FloatOrd(
                        2.0,
                    ),
                    51..52,
                ),
                Number(
                    FloatOrd(
                        3.0,
                    ),
                    53..54,
                ),
                Number(
                    FloatOrd(
                        4.0,
                    ),
                    55..56,
                ),
            ],
            49..56,
        ),
        30..57,
    ),
    AssignLocal(
        "_things",
        Array(
            [
                Number(
                    FloatOrd(
                        1.0,
                    ),
                    79..80,
                ),
                Number(
                    FloatOrd(
                        2.0,
                    ),
                    81..82,
                ),
                Number(
                    FloatOrd(
                        3.0,
                    ),
                    83..84,
                ),
                Number(
                    FloatOrd(
                        4.0,
                    ),
                    85..86,
                ),
            ],
            79..86,
        ),
        60..87,
    ),
    Expression(
        BinaryCommand(
            Named(
                "forEach",
            ),
            Code(
                Statements {
                    content: [
                        AssignLocal(
                            "thinghi",
                            BinaryCommand(
                                Add,
                                Variable(
                                    "_x",
                                    112..114,
                                ),
                                String(
                                    "test",
                                    117..123,
                                    DoubleQuote,
                                ),
                                115..116,
                            ),
                            94..123,
                        ),
                    ],
                    source: "private thinghi = _x + \"test\";",
                    span: 94..124,
                },
            ),
            Array(
                [
                    Number(
                        FloatOrd(
                            0.0,
                        ),
                        136..137,
                    ),
                    Number(
                        FloatOrd(
                            1.0,
                        ),
                        138..139,
                    ),
                    Number(
                        FloatOrd(
                            2.0,
                        ),
                        140..141,
                    ),
                    Number(
                        FloatOrd(
                            3.0,
                        ),
                        142..143,
                    ),
                ],
                136..143,
            ),
            127..134,
        ),
        91..144,
    ),
    Expression(
        UnaryCommand(
            Named(
                "systemChat",
            ),
            UnaryCommand(
                Named(
                    "str",
                ),
                Variable(
                    "_things",
                    161..168,
                ),
                157..160,
            ),
            146..156,
        ),
        146..168,
    ),
]
