libs/sqf/tests/snapshots/simple__simple_include.snap
---
source: libs/sqf/tests/simple.rs
expression: sqfc
---
[
    1,
    0,
    0,
    0,
    5,
    60,
    0,
    0,
    0,
    2,
    0,
    6,
    7,
    0,
    7,
    0,
    0,
    95,
    116,
    104,
    105,
    110,
    103,
    115,
    2,
    0,
    0,
    95,
    120,
    1,
    0,
    0,
    43,
    7,
    0,
    0,
    132,
    2,
    0,
    13,
    104,
    105,
    7,
    0,
    0,
    102,
    111,
    114,
    101,
    97,
    99,
    104,
    3,
    0,
    0,
    115,
    116,
    114,
    10,
    0,
    0,
    115,
    121,
    115,
    116,
    101,
    109,
    99,
    104,
    97,
    116,
    17,
    0,
    0,
    1,
    179,
    1,
    0,
    0,
    2,
    13,
    9,
    0,
    2,
    0,
    0,
    128,
    63,
    2,
    0,
    0,
    0,
    64,
    2,
    0,
    0,
    64,
    112,
    0,
    0,
    22,
    128,
    64,
    1,
    4,
    0,
    0,
    116,
    101,
    115,
    116,
    0,
    94,
    0,
    0,
    0,
    30,
    0,
    0,
    128,
    5,
    0,
    0,
    0,
    0,
    7,
    112,
    0,
    0,
    0,
    1,
    6,
    0,
    1,
    0,
    1,
    4,
    0,
    3,
    115,
    0,
    147,
    1,
    2,
    0,
    6,
    112,
    4,
    2,
    1,
    6,
    0,
    3,
    0,
    116,
    8,
    0,
    18,
    0,
    1,
    170,
    0,
    0,
    112,
    114,
    105,
    118,
    97,
    116,
    101,
    32,
    95,
    116,
    104,
    105,
    110,
    103,
    115,
    32,
    61,
    32,
    91,
    49,
    44,
    50,
    44,
    51,
    44,
    52,
    93,
    59,
    10,
    10,
    112,
    32,
    26,
    116,
    0,
    1,
    10,
    123,
    10,
    9,
    244,
    11,
    144,
    11,
    8,
    104,
    105,
    32,
    61,
    32,
    95,
    120,
    32,
    43,
    32,
    34,
    100,
    22,
    13,
    34,
    59,
    10,
    125,
    32,
    102,
    111,
    114,
    69,
    97,
    99,
    104,
    32,
    91,
    48,
    44,
    152,
    14,
    14,
    93,
    59,
    10,
    115,
    121,
    115,
    116,
    101,
    109,
    67,
    104,
    97,
    116,
    32,
    115,
    116,
    114,
    224,
    19,
    1,
    59,
    10,
    0,
    7,
    100,
    27,
    1,
    0,
    0,
    0,
    33,
    124,
    0,
    10,
    1,
    0,
    0,
    1,
    1,
    0,
    1,
    2,
    0,
    1,
    3,
    0,
    8,
    96,
    2,
    3,
    0,
    0,
    0,
    4,
    0,
    6,
    133,
    1,
    1,
    116,
    0,
    53,
    129,
    0,
    30,
    109,
    3,
    3,
    112,
    0,
    53,
    129,
    0,
    60,
    108,
    3,
    146,
    40,
    1,
    5,
    168,
    40,
    192,
    13,
    40,
    150,
    1,
    3,
    127,
    116,
    43,
    4,
    7,
    0,
    4,
    0,
    0,
    7,
    161,
    104,
    1,
    104,
    3,
    0,
    2,
    2,
    157,
    0,
    0,
    0,
    1,
    8,
    0,
    5,
    0,
    2,
    146,
    0,
    0,
    0,
    1,
    8,
    0,
    6,
    0,
    17,
    0,
    0,
    2,
    2,
    0,
    14,
    0,
    0,
    47,
    115,
    111,
    109,
    101,
    116,
    104,
    105,
    110,
    103,
    46,
    104,
    112,
    112,
    12,
    0,
    0,
    47,
    105,
    110,
    99,
    108,
    117,
    100,
    101,
    46,
    115,
    113,
    102,
    3,
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
]
